src/objects/CPQ_PreApproved_Custom_Product__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting is to Launch XAE Application from Account Object.
App Name: PreApproved Custom Products (Partners)</description>
    <fields>
        <fullName>PluginUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PluginUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionflowName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>actionflowName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>appId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hostUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>hostUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CPQ PreApproved Custom Product</label>
</CustomObject>